<resources>
    <string name="app_name">GlideMemoryDemo</string>
    <string name="image_activities">Image activities</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="view_pager">ViewPager</string>
    <string name="next">next</string>
    <string name="bitmap_sizes">Bitmap sizes</string>
    <string name="bitmap_sizes_small">Small bitmap sizes</string>
    <string name="overlay_size">Overlay sizes</string>
    <string name="targets">Targets</string>
</resources>
